tests/type-errors/storage_init_caller.arl
archetype storage_init_caller

variable a : address = caller
